# hal9000

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
hal9000/: __init__.py  __main__.py  arguments.py  github.py  nlp.py  routes.py  run.py  sdk.py  webhooks.py
tests/: test_hal9000.py
