[tool.poetry]
name = "hal9000"
version = "0.1.0"
description = ""
authors = ["Florian Richter <florian.richter@sap.com>"]

[tool.poetry.scripts]
hal9000 = "hal9000.run:main"

[tool.poetry.dependencies]
python = "^3.10"
spacy = {extras = ["apple"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pyright = "^1.1.246"
prospector = "^1.7.7"

[tool.pyright]
include = ["hal9000", "tests"]
strict = ["hal9000"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
